// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-checkbox spec: Render logic -> should render a checkbox with an input type of checkbox and empty label by default 1`] = `
<amplify-checkbox>
  <mock:shadow-root>
    <span class="checkbox">
      <input type="checkbox">
      <amplify-label></amplify-label>
    </span>
  </mock:shadow-root>
</amplify-checkbox>
`;

exports[`amplify-checkbox spec: Render logic -> should render a checkbox with an input type of checkbox and label 1`] = `
<amplify-checkbox label="Seattle">
  <mock:shadow-root>
    <span class="checkbox">
      <input type="checkbox">
      <amplify-label>
        Seattle
      </amplify-label>
    </span>
  </mock:shadow-root>
</amplify-checkbox>
`;

exports[`amplify-checkbox spec: Render logic -> should render with only a class of \`amplify-ui--checkbox\` 1`] = `
<amplify-checkbox>
  <mock:shadow-root>
    <span class="checkbox">
      <input type="checkbox">
      <amplify-label></amplify-label>
    </span>
  </mock:shadow-root>
</amplify-checkbox>
`;
